--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,20 @@ theme:
 
   # Header and footer text
   header_text: >
-     <img src='img/logo2.png'>
+   <h3>Get More Rigth In Your Inbox</h3>
+   <div id="mc_embed_signup">
+   <form action="//github.us11.list-manage.com/subscribe/post?u=cd3fd1008ccc77022ce994d6f&amp;id=8f0c87f195" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+   <div id="mc_embed_signup_scroll">
+   <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email Address" required>
+   <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+   <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_cd3fd1008ccc77022ce994d6f_8f0c87f195" tabindex="-1" value=""></div>
+   <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+   </div>
+   </form>
+   </div>
+   <!--End mc_embed_signup-->
 
-  header_text_feature_image: "img/landscape.jpg"
+  header_text_feature_image:
   footer_text: >
    Powered by <a href="http://jekyllrb.com">Jekyll</a> with <a href="https://rohanchandra.github.io/project/type/">Type Theme</a>
 
@@ -58,7 +69,7 @@ theme:
   google_fonts: "Source+Sans+Pro:400,700,700italic,400italic"
 
   # Post navigation
-  post_navigation: false
+  post_navigation: true
 
 # PAGINATION
 paginate: 5
